tests/e2e/filter_gateway_test.yaml
apiVersion: spacegate.idealworld.group/v1
kind: SgFilter
metadata:
  name: filters
  namespace: spacegate
spec:
  filters:
    - code: status
      config:
        title: SystemStatus
  targetRefs:
    - kind: gateway
      name: gateway
      namespace: spacegate
