tests/e2e/filter_httproute_test.yaml
apiVersion: spacegate.idealworld.group/v1
kind: SgFilter
metadata:
  name: filters
spec:
  filters:
    - code: status
      config:
        title: SystemStatus
  targetRefs:
    - kind: httproute
      name: echo
