tests/e2e/gateway_redis_test.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: spacegate
spec:
  gatewayClassName: spacegate
  listeners:
    - name: http
      port: 9000
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echo
  namespace: spacegate
spec:
  parentRefs:
    - name: gateway
      namespace: spacegate
  rules:
    - filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      matches:
        - path:
            type: PathPrefix
            value: /echo
      backendRefs:
        - name: echo
          port: 80
---
apiVersion: spacegate.idealworld.group/v1
kind: SgFilter
metadata:
  name: filters
  namespace: spacegate
spec:
  filters:
    - code: limit
      config:
        max_request_number: 10
  targetRefs:
    - kind: gateway
      name: gateway
      namespace: spacegate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
