tests/e2e/mult_listeners.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: spacegate
spec:
  gatewayClassName: spacegate
  listeners:
  - name: http1
    port: 9000
    protocol: HTTP
  - name: http2
    port: 9100
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echo
  namespace: spacegate
spec:
  parentRefs:
  - name: gateway
    namespace: spacegate
  rules:
  - filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    matches:
    - path:
        type: PathPrefix
        value: /echo
    backendRefs:
    - name: echo
      port: 80
