tests/e2e/websocket_base_test.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: spacegate
  listeners:
    - name: http
      port: 9000
      protocol: http
