tests/e2e/websocket_echo_test.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: websocket-echo
spec:
  parentRefs:
  - name: gateway
  rules:
  - filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    matches:
    - path:
        type: PathPrefix
        value: /echo
    backendRefs:
    - name: websocket-echo
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-echo
  template:
    metadata:
      labels:
        app: websocket-echo
    spec:
      containers:
      - name: websocket-echo
        image: pvtmert/websocketd
        ports:
        - containerPort: 80
        args: ["--port", "80","tee"]
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-echo
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: ws
  selector:
    app: websocket-echo
